# SOCG_2025_submission_implementation_epsilon_net

./: README.md
code/benchmarks/: CMakeLists.txt  combinatorics.cpp  execution_time.cpp  random_seeds_for_benchmarks.txt  seeds_generator.py
code/benchmarks/input_domains/: input_domain_0.txt  input_domain_1.txt  input_domain_10.txt  input_domain_100.txt  input_domain_1000.txt  input_domain_101.txt  input_domain_102.txt  input_domain_103.txt  input_domain_104.txt  input_domain_105.txt  input_domain_106.txt  input_domain_107.txt  input_domain_108.txt  input_domain_109.txt  input_domain_11.txt  input_domain_110.txt  input_domain_111.txt  input_domain_112.txt  input_domain_113.txt  input_domain_114.txt  (+161 more)
code/demo/: CMakeLists.txt  dirichlet_and_eps_net.cpp  epsilon_net_demo.cpp  window.cpp  window.h
code/include/: AHST2_epsilon_net_combinatorics.h  Anchored_hyperbolic_surface_triangulation_2.h  Anchored_hyperbolic_surface_triangulation_2.h~  Hyperbolic_Dirichlet_domain_2.cpp  Hyperbolic_Dirichlet_domain_2.h
results/: kernels_results.txt  results_summary.ods  small_systole.txt  variants_execution_time.txt  variants_results.txt  variants_running_time.txt
results/combinatorics/: insertions.txt  max_flips.txt  max_lifts.txt  max_number_flips.txt  max_number_lifts_locate.txt  number_flips.txt  number_insertions.txt  number_located_in_start_lift.txt  total_flips.txt  total_lifts.txt  total_lifts_locate.txt  zero_lift.txt
results/execution_time/: execution_time.txt  number_vertices.txt
results/locate_comparison/: eps_net_straight_time.txt  eps_net_visibility_time.txt
results/running_time/: num_vertices.txt  time.txt
(+185 files in other folders)
